[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Enemies/WanderController/WanderController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/AI/SlimeAI.gd" type="Script" id=3]

[node name="SlimeAI" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="WanderController" parent="." instance=ExtResource( 2 )]

[node name="MoveIntervalTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="DebugTimer" type="Timer" parent="."]

[connection signal="timeout" from="DebugTimer" to="." method="_on_DebugTimer_timeout"]
